2005-02-16 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc: experiments in ioport redesign.
	
2005-02-16 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: Added 'getBitChar()' method to
	the open collector stimulus class.
	
2005-02-15 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h: Added a 'getIO' method to the
	IOPIN class that will allow an individual I/O pin in a port to be
	accessed.
	* src/stimuli.h, src/stimuli.cc: Add more state information to the
	snode class. Also, added the 'getBitChar()' method that will
	return the state of the stimulus in the form of an ASCII character
	(e.g. 0,1,Z,W).

2005-02-11 Scott Dattalo <scott@dattalo.com>
	* src/os_dependent.cc: Libraries stored in system directories were
	getting ignored.

2005-02-09 Scott Dattalo <scott@dattalo.com>
	* src/Makefile.am: Newly added src file 'os_dependent.cc' was not
	part of the Makefile
	* cli/input.cc, src/os_dependent.cc: abstracted some os dependent
	changes that were recently added
	
2005-02-01 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc, src/trace.cc: Added 'Debug()'
	method to processor class and call it whenever a register
	assertion occur.s

2005-01-30 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in, configure_win32.awk: extract version, package and
	  bugreport values from configure.ac

2005-01-26 Scott Dattalo <scott@dattalo.com>
	* configure.ac: repositioned the call to the m4 macro wi_READLINE_LIB
	so that it would run properly.

2005-01-26 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: added more external cross references.
	* module/modules.vcproj: changed from pthreadVC1.lib to
	pthreadVC.lib.

2005-01-23 Scott Dattalo <scott@dattalo.com>
	* configure.ac: Craig Franklin updated gpsim's configure files. It
	turns out there was a tiny bug preventing things to build a
	*second* time (the first time would work fine)
	* src/gpsim_time.h, src/gpsim_time.cc, src/init.cc: The newly